--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,10 @@
         align-items: center;
         justify-content: center;
       }
+      #fps {
+        white-space: pre;
+        font-family: monospace;
+      }
     </style>
     <title>Hello wasm-pack!</title>
   </head>
@@ -21,6 +25,7 @@
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
 
     <button id="play-pause"></button>
+    <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
